_sass/_default.scss
/* =Base */
body {
    font-family: 'Lato';
    font-weight: 400;
    color: $iron;
    position: relative;
}

a {
    color: black;
    font-weight: bold;
    text-decoration: none;
}

p {
    font-size: 20px;
    line-height: 32px;
    position: relative;
    font-family: 'Lato';
    color: black;
    font-weight: 300;
}

img {
    max-width: 100%;
}

blockquote {
    letter-spacing: 3px;
    margin:0px;
    margin-top: 40px;
    margin-bottom: 70px;
    padding: 0px;
    text-align: center;
    position: relative;

    footer {
        position: absolute;
        bottom: -35px;
        font-size: 15px;
        color: $iron;
        letter-spacing: 0px;
        left:0px;
        right: 0px;

        &:before { content: "** "; }
        &:after { content: " **"; }
    }

    p {
        display: inline;
        font-size: 20px;
        color: $cloudy;
        font-weight: 400;
        &:before { content: "“ "; }
        &:after { content: " ”"; }
    }
}

strong {
    color: $iron;
}

/* =Header */
.main-background-image {
  max-width: 100%;

  background-repeat: repeat;
  background-size: 14em;
  position: relative;
  padding-top: 100px;
  padding-bottom: 50px;
}

.main-background-image img {
  display: block;
  height: 200px;
  margin-left: auto;
  margin-right: auto;
}

 #projects-title {
   background-image: url("/assets/img/backgrounds/projects_header.png");
 }

 #blog-title {
   background-image: url("/assets/img/backgrounds/blog_header.png");
 }

 #pictures-title {
   background-image: url("/assets/img/backgrounds/pictures_header.png");
   background-size: 18em;
 }

 #data-title {
   background-image: url("/assets/img/backgrounds/data_header.png");
 }

 #contact-title {
   background-image: url("/assets/img/backgrounds/contact_header.png");
 }

.wrapper {
    max-width: 90%;
    margin: 50px;
    position: relative;
}

.header {
    background-color: #161718;
    margin: 0;
    padding: 0;
    position: fixed;
    left: 0px;
    top: 0px;
    height: 4.5em;
    width: 100%;
}

.navigation {
    top: 0px;
    margin: 20px auto;
}

.logo img {
    max-width: 175px;
    float: left;
    margin-left: .5em;
    padding-top: .2em;
    display: inline-block;
    position: relative;
}

.menu {
    font-size: 1em;
    margin-right: 1em;
    padding: 0px;
    list-style-type: none;
}

.menu__entry {
    margin-right: 1em;
    display: inline;
    float: right;
    font-color: white;

}

.menu__entry a {
    color: white;
    font-weight: 700;
    font-size: 1.5em;
    display: block;
    padding-left: 8px;

    &:hover {
      color: yellow;
    }
}

.social-links {
    float:right;
    font-size: 24px;
    color: $cloudy;
    list-style-type: none;

}

/* =Titles */

.homepage-title {
  text-decoration: none;
  font-family: 'Playfair Display';
  font-size: 3em;
  font-weight: 700;
  font-style: italic;
  color: black;
  text-align: center;
  margin-left: 100px;
  margin-right: 100px;
  margin-bottom: 40px;

}

.homepage-title a:hover {
    background-color: yellow;
}

.page-title {
    margin-top: 50px;
    margin-bottom:30px;
    text-align: center;
}

.page-title img {
    margin-top: 50px;
    margin-bottom: 15px;
    text-align: center;
}

.page-title__text {
    text-align: center;
    font-weight: 700;
    font-size: 70px;
}

.page-title__text img {
  margin-top: 0px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 10px;
  max-width: 60%;
  padding-top: 40px;
}


.page-title__subtitle {
    font-weight: 300;
    font-size: .75em;
    color: #1d1d1b;
    font-family: 'Lato';
    text-align: center;
}

.post-title {
    margin-bottom: 110px;
}

.post-title__text {
    font-size: 40px;
}

.post-title__subtitle {
    font-size: 20px;
}

.blog-header {
  text-decoration: none;
  font-family: 'Playfair Display';
  font-size: 1.5em;
  font-weight: 700;
  font-style: italic;
  color: black;
  margin-bottom: 20px;
}

.date-header {
  text-decoration: none;
  font-family: 'Playfair Display';
  font-size: 1.5em;
  font-weight: 700;
  font-style: italic;
  color: black;
  float: right;

}
/* =Homepage Blog Box */
.recent-posts {
  text-align: center;
}

.blog-item-box {
  max-width: 20%;
  display: inline-block;
  margin: 10px;
}

.blog-item-box img {
  display: block;
}

.blog-item-box p {
  font-size: 14px;
  line-height: normal;

}

/* =Post teasers */

.list-posts {
    list-style-type: none;
    padding: 0px;
}

.post-teaser {
    margin-bottom: 45px;
    font-weight: 700;
}

.post-teaser__title {
    font-family: 'Lato';
    font-weight: 300;
    font-size: 22px;
    color: black;
}

.post-teaser__title:hover {
    background-color: yellow;
}

.post-teaser__date {
    font-size: 16px;
    font-family: 'Lato';
    font-weight: 400;
    float: right;
    vertical-align: middle;
    color: #2B292B;
}

.post-teaser__date:hover {
    background-color: yellow;
}

.empty-post-list {
    font-size: 22px;
    font-weight: 700;
    color: $iron;
    text-align: center;
}

/* =Explore */
.explore {
    text-align: center;
    color: $cloudy;
    margin-bottom: 60px;
}

.explore__devider {
    font-size: 18px;
    letter-spacing: 8.18px;
}

.explore__label {
    font-size: 14px;
    margin-top: 15px;
}

.categories {
    list-style-type: none;
    margin-top: 15px;
    padding: 0px;
}

.categories__item {
    display: inline-block;
    font-weight: 700;
    font-size: 18px;
}

.categories__item a {
    color: black;
}

.categories__item a:hover {
    background-color: yellow;
}

.categories__item:after {
    content: "/";
    margin-left: 6px;
    color: $cloudy;
}

.categories__item:last-child:after {
    content: "";
    margin-left: 0px;
}


/* =Post page */
.about {
    color: $cloudy;
    margin-top: 70px;
    text-align: center;
    line-height: 24px;
}

.about__devider {
    font-size: 20px;
    margin-bottom: 50px;
    letter-spacing: 9.09px;
}

.about__text {
    font-size: 18px;
}

#disqus_thread {
    margin-top: 100px;
}

@media (max-width: 800px) {
    /* =Base */
    p {
        font-size: 16px;
        line-height: 1.6;
    }

    .wrapper {
        width: 80%;
    }

    .navigation,
    .social-links {
        @include centered-block();
    }

    .social-links {
        font-size: 30px;
        margin-top: 35px;
    }

    .page-title {
        margin-top: 80px;
        margin-bottom: 60px;
    }

    .page-title__text {
        font-size: 40px;
    }

    .page-title__subtitle {
        font-size: 18px;
    }

    .post-teaser__title {
        font-size: 18px;
        @include centered-block();
    }

    .post-teaser__date {
        font-size: 16px;
        margin-top: 10px;
        float: none;
        @include centered-block();
    }

    .explore {
        margin-top: 80px;
    }

    .post-title__text {
        font-size: 28px;
    }

    .post-title__subtitle {
        font-size: 18px;
    }
}

